--- a/Wine_Quality_Machine_Learning.ipynb
+++ b/Wine_Quality_Machine_Learning.ipynb
@@ -20,7 +20,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "data = pd.read_csv(r\"C:\\Users\\Erdil\\Desktop\\DataSet\\winequality-red.csv\")\n",
+    "data = pd.read_csv(r\"../winequality-red.csv\")\n",
     "df = data.copy()"
    ]
   },
